# ORION

./: .env.example  .gitignore  README.md  docker-compose.prod.yml  docker-compose.yml
docs/: deployment.md
orion-api/: Dockerfile  main.py  pyproject.toml  requirements.txt
orion-api/core/: config.py
orion-api/models/: db_models.py  schemas.py
orion-api/routers/: chat.py  config_router.py  health.py  sessions.py  vision.py
orion-api/services/llm/: health.py  router.py
orion-api/services/memory/: database.py  repository.py
orion-api/services/voice/: stt.py  tts.py
orion-api/utils/: connection_manager.py
orion-ui/: Dockerfile  next.config.ts  package.json  tailwind.config.ts
orion-ui/src/app/: globals.css  layout.tsx  page.tsx
orion-ui/src/components/camera/: CameraFeed.tsx  HardwareToggle.tsx
orion-ui/src/components/chat/: ChatInput.tsx  ChatWindow.tsx  MessageBubble.tsx
orion-ui/src/components/config/: ProviderConfigPanel.tsx
orion-ui/src/components/core/: StatusBar.tsx
orion-ui/src/components/voice/: OrbVisualizer.tsx  WaveformVisualizer.tsx
orion-ui/src/hooks/: useHardware.ts  useOrionSocket.ts  useVoiceInput.ts  useVoiceSynthesis.ts
orion-ui/src/lib/: api.ts
orion-ui/src/types/: index.ts
